<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/action_open_menu"
		android:showAsAction="never"
		android:title="@string/action_open" >

		<menu>

			<item
				android:id="@+id/action_open"
				android:icon="@drawable/ic_action_storage"
				android:showAsAction="never"
				android:title="@string/action_open_file"/>

			<item
				android:id="@+id/action_import"
				android:icon="@drawable/ic_action_web_site"
				android:showAsAction="never"
				android:title="@string/action_import"/>
		</menu>
	</item>
    <item
        android:id="@+id/action_solution"
		android:icon="@drawable/ic_action_help"
        android:showAsAction="never"
        android:title="@string/action_solution"/>
    <item
        android:id="@+id/action_bluetooth_on"
        android:showAsAction="never"
        android:title="@string/action_bluetooth_on"/>
    <item
        android:id="@+id/action_bluetooth_off"
        android:showAsAction="never"
        android:title="@string/action_bluetooth_off"/>
    
</menu>
