<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SpellActivity" >

    <TextView
        android:id="@+id/clueText"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_no_data"
        android:textIsSelectable="true"
        android:padding="5dp"
        android:visibility="gone" >
    </TextView>
    
    <EditText
        android:id="@+id/textView"
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/text_hint"
        android:inputType="textNoSuggestions"
        android:padding="5dp"
        android:singleLine="true"
        android:typeface="monospace" >

   		<requestFocus />
    </EditText>
    
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/checkButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_check" />

        <Button
            android:id="@+id/anagramButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_anagram" />

        <Button
            android:id="@+id/crosswordButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_crossword" />

   </LinearLayout>
    
    <GridView
       android:id="@+id/listView"
       android:padding="5dp"
       android:layout_width="match_parent" 
       android:layout_height="wrap_content"
        android:columnWidth="200dp"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:numColumns="auto_fit"
        android:scrollbars="vertical"
        android:verticalSpacing="5dp" />

    <TextView
        android:id="@+id/listEmpty"
        style="@android:style/TextAppearance.Large"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/text_no_data"
        android:visibility="gone" >
    </TextView>
   
    
</LinearLayout>
