<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/gridLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent" >

        <uk.org.downiesoft.crossword.GridView
            android:id="@+id/gridView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/clueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/gridButtons"
            android:layout_below="@id/gridView"
            android:text="@string/text_threelines"
            android:textSize="@dimen/clue_text_size" />

        <LinearLayout
            android:id="@+id/gridButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@id/clueText" >

            <Button
                android:id="@+id/gridEnterButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_enter"
                android:textSize="18sp" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/gridEraseButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_erase"
                android:textSize="18sp" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/gridCluesButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_clues"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/emptyLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:visibility="gone" >

        <TextView
            android:text="@string/text_no_crossword"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />
    </RelativeLayout>

</RelativeLayout>